--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -18,7 +18,7 @@
     </div>
 
     <div class="pl-20 pb-12">
-        <img src="../../public/images/footer.png" alt="" srcset="">
+        <img src="./images/footer.png" alt="" srcset="">
         <p>This work is licensed under a <a class="text-white hover:underline">Creative Commons Attribution-ShareAlike 4.0 International License .</a></p>
     </div>
 
