--- a/src/components/PartnersLogo.astro
+++ b/src/components/PartnersLogo.astro
@@ -1,4 +1,4 @@
-<div class="bg-white h-24 w-screen py-1 flex items-center justify-center max-md:h-16">
+<div class="bg-white h-24 w-screen py-1 flex items-center justify-center max-md:h-16 max-sm:h-14">
       <img
         class="w-auto h-4/6 p-2 object-cover"
         src="./logos/iitb-logo.png"
