--- a/src/components/contactUs.astro
+++ b/src/components/contactUs.astro
@@ -5,15 +5,15 @@ import Heading from "./heading.astro";
 <div>
     <center><Heading>Core Team & Contact Us <ion-icon class="rotate-180" name="call-sharp"></ion-icon></Heading></center>
 
-    <div class="grid grid-cols-2  justify-center justify-items-center">
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+    <div class="grid grid-cols-2 justify-center justify-items-center max-md:block">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Prof. Kannan Moudgalya <br><br>
     
             Principal Investigator, FOSSEE, Spoken Tutorial, NVLI<br><br>
     
             Indian Institute of Technology Bombay
         </div>
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Prof. Pennan Chinnasamy<br><br>
 
             Co.P.I., FOSSEE & PiC, The Rural Data Research & Analysis (RuDRA) Lab, IIT Bombay<br><br>
@@ -21,14 +21,14 @@ import Heading from "./heading.astro";
             Indian Institute of Technology Bombay
         </div>
 
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Prof. Roshan Srivastav<br><br>
 
             Project Director, IIT Tirupati Navavishkar I-Hub Foundation (NM-ICPS, DST)<br><br>
 
             Indian Institute of Technology Tirupati
         </div>
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Mr. Rajesh Kushalkar<br><br>
 
             Senior Manager, FOSSEE-Open Source Hardware (OSHW)<br><br>
@@ -36,14 +36,14 @@ import Heading from "./heading.astro";
             Indian Institute of Technology Bombay
         </div>
 
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Dr. Sunil T T<br><br>
 
             Director<br><br>
 
             ICFOSS
         </div>
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Dr. Srinivasan Ravindran<br><br>
 
             Program Head, FOSS Business Solutions<br><br>
@@ -51,14 +51,14 @@ import Heading from "./heading.astro";
             ICFOSS
         </div>
 
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Mr. Shafeek P M<br><br>
 
             Technical Coordinator - IoT<br><br>
 
             ICFOSS
         </div>
-        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium">
+        <div class="border border-slate-300 w-3/4 px-8 rounded-xl text-center font-medium max-md:w-full">
             Mr. Jayakumar K S<br><br>
 
             Manager, Incubation & FOSS Business Solutions<br><br>
@@ -68,7 +68,7 @@ import Heading from "./heading.astro";
 
 
 
-        <div class="border border-slate-300 w-2/5 px-8 rounded-xl text-center font-medium col-span-2 justify-self-center">
+        <div class="border border-slate-300 w-2/5 px-8 rounded-xl text-center font-medium max-md:w-full col-span-2 justify-self-center">
             Mr. Mohamed Kasim Khan<br><br>
 
             National Coordinator, FOSSEE-GIS & GIS-IoT Hackathon<br><br>
@@ -78,6 +78,10 @@ import Heading from "./heading.astro";
             Indian Institute of Technology Bombay
         </div>
     </div>
+
+
+
+    
     <div class="text-center p-8 max-md:text-sm max-md:p-1">
         <h1 class="font-bold">Please write to us in case of any queries regarding the Hackathon at:</h1>
         <h1 class="font-bold text-xl pt-4"><ion-icon name="mail-outline"></ion-icon> Email : <a href="#" class="text-blue-600">[at]cse[dot]iitb[dot]ac[dot]in;</a><br><a href="#" class="text-blue-600">mohamedkasim[at]iitb[dot]ac[dot]in</a></h1>
