--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,7 +1,7 @@
 <div class="bg-blue-600">
-    <div class="flex p-10 pl-20 text-white font-bold">
+    <div class="flex p-10 pl-20 text-white font-bold max-md:pl-10 max-sm:block">
         <ul class="flex-auto w-max">
-            <li>About</li> <br>
+            <li class="underline">About</li> <br>
             <li><a href="#" class="hover:underline">IIT Bombay</li></a>
             <li><a href="#" class="hover:underline">FOSSEE</li></a>
             <li><a href="#" class="hover:underline">NMEICT</li></a>
@@ -10,14 +10,14 @@
             <li><a href="#" class="hover:underline">ICFOSS</li></a>
             <li><a href="#" class="hover:underline">Spoken Tutorial</li></a>
         </ul>
-        <ul class="flex-auto w-80">
-            <li>Resources</li> <br>
+        <ul class="flex-auto w-80 max-sm:mt-10">
+            <li class="underline">Resources</li> <br>
             <li><a href="#" class="hover:underline">QGIS</li></a>
             <li><a href="#" class="hover:underline">Spoken Tutorials - FOSSEE - GIS</li></a>
         </ul>
     </div>
 
-    <div class="pl-20 pb-12">
+    <div class="pl-20 pb-12 max-md:pl-10">
         <img src="./images/footer.png" alt="" srcset="">
         <p>This work is licensed under a <a class="text-white hover:underline">Creative Commons Attribution-ShareAlike 4.0 International License .</a></p>
     </div>
