--- a/src/components/landing.astro
+++ b/src/components/landing.astro
@@ -3,14 +3,14 @@ import Button from './Button.astro'
 ---
 <div class="max-md:overflow-hidden bg-zinc-100 grid gap-2 grid-cols-2 max-md:grid-cols-1">
     <div class="flex justify-center items-center max-md:order-2">
-        <img class="h-3/5 w-3/5 max-md:w-auto" src="./images/indiamap.png" alt="" srcset="">
+        <img class="h-3/5 w-3/5 max-md:w-auto max-md:h-2/3" src="./images/indiamap.png" alt="" srcset="">
     </div>
 
 
-    <div class="">
-        <h1 class="font-mono text-4xl text-center text-blue-900 mt-16">IIT Bombay-FOSSEE-GIS/OSHW,<br>IITTNiF & ICFOSS present</h1>
-        <img class="h-auto w-11/12" src="./images/right-img.png" alt="" srcset="">
-        <div class="bg-amber-800 text-white w-11/12 rounded-2xl p-5 mt-5 text-center text-xl mb-16">
+    <div>
+        <h1 class="font-mono text-4xl text-center text-blue-900 mt-16 max-md:text-3xl">IIT Bombay-FOSSEE-GIS/OSHW,<br>IITTNiF & ICFOSS present</h1>
+        <img class="h-auto w-11/12 m-auto" src="./images/right-img.png" alt="" srcset="">
+        <div class="bg-amber-800 text-white w-11/12 rounded-2xl p-5 mt-5 text-center text-xl mb-16 max-md:mx-auto max-md:text-lg max-sm:text-base">
             <h1 class="py-1"><b>Registration opens:</b> April 29, 2023</h1>
             <h1 class="py-1"><b>Registration close:</b> June 10, 2024</h1> 
             <h1 class="py-1"><b>Hackathon start date :</b> June 12, 2024</h1>  
