--- a/src/components/logoslider.astro
+++ b/src/components/logoslider.astro
@@ -3,13 +3,13 @@
     <div class="logos group relative overflow-hidden whitespace-nowrap py-1 [mask-image:_linear-gradient(to_right,_transparent_0,_white_128px,white_calc(100%-128px),_transparent_100%)]">
       <div class="animate-slide-left-infinite group-hover:animation-pause inline-block w-max">
         <!-- Ensure that the images cover entire screen width for a smooth transition -->
-        <img class="mx-4 inline h-16" src="./logos/iitb-logo.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/fossee-logo.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/nmeict-logo.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/rudra-logo.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/iit-tirupati.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/navavishkaar.png" alt="Transistor" />
-        <img class="mx-4 inline h-16" src="./logos/NM-ICPS-logo1.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/iitb-logo.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/fossee-logo.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/nmeict-logo.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/rudra-logo.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/iit-tirupati.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/navavishkaar.png" alt="Transistor" />
+        <img class="mx-4 inline h-16 max-md:h-6" src="./logos/NM-ICPS-logo1.png" alt="Transistor" />
         
 
       </div>
