--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Footer from '../components/footer.astro';
 		<title>National Level Open Hardware-IoT Geospatial Hackathon</title>
 	</head>
 
-	<body class="max-md:overflow-x-hidden bg-left bg-fixed bg-no-repeat bg-black" style="background-image: url('./images/side-icon.png')">
+	<body class="bg-left bg-fixed bg-no-repeat bg-black" style="background-image: url('./images/side-icon.png')">
 			<>
 				<PartnersLogo />
 				<Navbar></Navbar>
