--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -2,7 +2,7 @@
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <nav class="overflow-x-hidden bg-zinc-100 px-4 py-2 sticky top-0 w-full z-10">
+  <nav class="bg-zinc-100 px-4 py-2 sticky top-0 w-full z-10 max-md:min-h-8 max-sm:-top-1">
     <div class="flex justify-center">
       <!-- Nav links -->
       <div class="nav_link flex space-x-0 max-md:hidden max-md:grid max-md:w-full">
