menu icon possition fix

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -17,7 +17,7 @@
 
       <!-- Responsive toggle button (for smaller devices) -->
       <span class="text-3xl cursor-pointer mx-2 md:hidden block">
-        <ion-icon class="menu absolute inset-y-0 right-5 text-orange-600" name="menu"></ion-icon>
+        <ion-icon class="menu absolute inset-y-0 right-5 mt-2 text-orange-600" name="menu"></ion-icon>
       </span>
       
     </div>
