new carousel logo file update

--- a/src/components/content.astro
+++ b/src/components/content.astro
@@ -5,6 +5,7 @@ import PartnersLogo from "./PartnersLogo.astro";
 import FAQ from "./FAQ.astro";
 import ContactUs from "./contactUs.astro";
 import Logoslider from "./logoslider.astro";
+import Carousel from "./carousel.astro";
 ---
 
 <div class="bg-white w-11/12 m-auto -mt-12 rounded-t-xl p-8 border-2 max-md:w-full max-md:text-base">
@@ -86,8 +87,8 @@ import Logoslider from "./logoslider.astro";
     <br /><br />
 
     <Heading>Partners and Organisers</Heading>
-    <Logoslider />
 
+    <Carousel></Carousel>
     <p>
         <b
             >Main Organizer: IIT Bombay FOSSEE GIS & OSHW project (NMEICT,
