little change in carousel and the it may be last commit

--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -29,6 +29,21 @@
             <div class="slide">
                 <img src="./logos/st-logo.png" />
             </div>
+            <div class="slide">
+                <img src="./logos/iit-tirupati.png" />
+            </div>
+            <div class="slide">
+                <img src="./logos/iitb-logo.png" />
+            </div>
+            <div class="slide">
+                <img src="./logos/navavishkaar.png" />
+            </div>
+            <div class="slide">
+                <img src="./logos/NM-ICPS-logo1.png" />
+            </div>
+            <div class="slide">
+                <img src="./logos/nmeict-logo.png" />
+            </div>
             <!-- Img Code End -->
         </div>
     </div>
@@ -81,7 +96,7 @@
         0% {
             transform: translateX(0);
         }
-        95% {
+        100% {
             transform: translateX(calc(-250px * 7));
         }
     }
